--- a/picture_library/build.gradle
+++ b/picture_library/build.gradle
@@ -27,9 +27,9 @@ dependencies {
 //    implementation 'com.github.yalantis:ucrop:2.2.2'
 
     //noinspection GradleCompatible
-    compile "com.android.support:appcompat-v7:${cfgs.androidSupportVersion}"
+    implementation "com.android.support:appcompat-v7:${cfgs.androidSupportVersion}"
     //noinspection GradleCompatible
-    compile "com.android.support:recyclerview-v7:${cfgs.androidSupportVersion}"
+    implementation "com.android.support:recyclerview-v7:${cfgs.androidSupportVersion}"
     implementation "com.github.bumptech.glide:glide:${cfgs.glide}"
     implementation "io.reactivex.rxjava2:rxjava:${cfgs.rxjava}"
     implementation "io.reactivex.rxjava2:rxandroid:${cfgs.rxandroid}"
