--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion cfgs.compileSdkVersion
-
+    buildToolsVersion "27.0.1"
     defaultConfig {
         applicationId "com.luck.pictureselector"
         minSdkVersion cfgs.minSdkVersion
