--- a/picture_library/build.gradle
+++ b/picture_library/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion cfgs.compileSdkVersion
-
+    buildToolsVersion "27.0.1"
     defaultConfig {
         minSdkVersion cfgs.minSdkVersion
         targetSdkVersion cfgs.targetSdkVersion
